--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest --watchAll",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
@@ -16,11 +16,14 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/jest": "^30.0.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "expo": "^49.0.0",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
