--- a/jest.config.json
+++ b/jest.config.json
@@ -3,7 +3,10 @@
   "transformIgnorePatterns": [
     "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
   ],
-  "setupFiles": ["./src/libs/asyncStorage/__test__/async-storage.js"],
+  "setupFiles": [
+    "./src/libs/asyncStorage/__test__/async-storage.js",
+    "./src/routes/__test__/react-native-safe-area-context.js"
+  ],
   "transform": {
     "^.+\\.jsx?$": "babel-jest",
     "^.+\\.svg$": "jest-transformer-svg"
