--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 20.x
 
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
 
       - name: Run Tests
         run: npm run test
