chore: começo do cd p verificar se o teste termina no ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,10 @@ jobs:
 
       - name: Run Tests
         run: npm run test
+  CD:
+    name: Continous Deployment
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
